labs/ingress/specs/ckad/host-routing/multi-host.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-host
  labels:
    kubernetes.courselabs.co: ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-host-ingress
  namespace: multi-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  rules:
  - host: app1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80
  - host: app2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80
  - host: app3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80
