labs/ingress/specs/ckad/host-routing/single-host.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: single-host
  labels:
    kubernetes.courselabs.co: ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: single-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: single-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-host-ingress
  namespace: single-host
  labels:
    kubernetes.courselabs.co: ingress
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc
            port:
              number: 80
